csv parse installation

--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "highcharts": "^11.1.0",
-    "highcharts-react-official": "^3.2.0"
+    "highcharts-react-official": "^3.2.0",
+    "papaparse": "^5.4.1"
   }
 }
